Modal z-index issue

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -81,6 +81,8 @@ $popover-arrow-color: #fff;
 $modal-inner-padding: 0;
 $modal-content-border-radius: 16px;
 $modal-content-border-width: 0;
+$zindex-modal-backdrop: 1080;
+$zindex-modal: 1085;
 
 // Modal close buttons
 $close-text-shadow: 0;
