--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -450,7 +450,10 @@ $col-spacing: 18px;
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 10;
+
+    &.js-is-sticky {
+        z-index: 1075;
+    }
 }
 
 .compare {
